--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,20 @@
+:root .dark {
+  --Mint: #42b883;
+  --Jet: #2f2f2f;
+  --Eerie-black: #1a1a1a;
+  --Eerie-black-2: #242424;
+  --White: rgb(255 255 255 / 87%);
+  --Platinum: rgb(235 235 235 / 60%);
+}
+:root {
+  --Mint: #42b883;
+  --Jet: #ffffff;
+  --Eerie-black: var(--Jet);
+  --Eerie-black-2: #f9f9f9;
+  --White: #213547;
+  --Platinum: rgb(60 60 60 / 70%);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -12,20 +29,21 @@ img {
   max-width: 100%;
 }
 body {
-  background: #1a1a1a;
+  background: var(--Eerie-black);
+  min-height: calc(100vh - 32px);
 }
 form {
   padding: 4px 4px 4px 8px;
   margin: 32px auto 80px;
-  border: 1px solid #42b883;
+  border: 1px solid var(--Mint);
   display: grid;
   grid-template-columns: 24px 1fr max-content;
   align-items: center;
   max-width: 360px;
-  color: rgb(250 250 250);
+  color: var(--White);
   height: 48px;
   border-radius: 2px;
-  background: #2f2f2f;
+  background: var(--Jet);
 }
 input {
   appearance: none;
@@ -40,7 +58,7 @@ input {
 svg {
   stroke-width: 1.6;
   vertical-align: middle;
-  color: #42b883;
+  color: var(--Mint);
 }
 button {
   appearance: none;
@@ -52,8 +70,8 @@ button {
   font-weight: 600;
   transition: 0.3s all;
   line-height: 1.5rem;
-  color: #1a1a1a;
-  background: #42b883;
+  color: var(--Eerie-black);
+  background: var(--Mint);
   border: none;
 }
 #app {
@@ -76,19 +94,19 @@ button {
   grid-auto-rows: min-content;
 }
 .user-status h1 {
-  color: rgb(255 255 255 / 87%);
+  color: var(--White);
   font-size: 1.5rem;
   transition: color 0.3s;
   line-height: 2rem;
 }
 .user-status span {
-  color: rgb(235 235 235 / 60%);
+  color: var(--Platinum);
 }
 .user:hover h1 {
-  color: #42b883;
+  color: var(--Mint);
 }
 .user-repos {
-  border-top: 2px solid #42b883;
+  border-top: 2px solid var(--Mint);
   display: grid;
   gap: 12px;
   padding: 12px 0;
@@ -98,17 +116,94 @@ button {
 .user-repos li > a {
   display: grid;
   align-items: center;
-  color: #42b883;
+  color: var(--Mint);
   padding: 4px 8px;
   font-weight: 500;
   transition: all 0.3s;
   border-radius: 2px;
-  background: #242424;
+  background: var(--Eerie-black-2);
   grid-template-columns: 1fr max-content;
 }
 .repo-status > * {
   font-size: 0.875rem;
 }
-.user-repos li > a:hover {
+.dark .user-repos li > a:hover {
   color: #f1f1f1;
+}
+
+#switch-theme svg {
+  fill: var(--White);
+  width: 16px;
+  left: 2px;
+  transition: all 0.3s;
+  position: absolute;
+  border-radius: 50%;
+  background: var(--Eerie-black);
+  padding: 3px;
+}
+#switch-theme {
+  align-items: center;
+  display: flex;
+  border-radius: 24px;
+  position: absolute;
+  right: 12px;
+  top: 12px;
+  height: 20px;
+  width: 40px;
+}
+
+.dark #switch-theme svg {
+  transform: translate3d(20px, 0, 0);
+}
+.dark .vt-switch-appearance-sun,
+.vt-switch-appearance-moon {
+  opacity: 0;
+}
+
+.vt-switch-appearance-sun,
+.dark .vt-switch-appearance-moon {
+  opacity: 1;
+}
+
+.error-modal > div {
+  position: fixed;
+  display: grid;
+  gap: 12px;
+  color: var(--Mint);
+  background: var(--Eerie-black-2);
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  font-weight: 500;
+  padding: 8px;
+  text-align: center;
+  border: 2px solid var(--Mint);
+  animation: smooth 0.3s forwards;
+  border-radius: 2px;
+}
+.error-modal::before {
+  content: "";
+  width: 100vw;
+  display: block;
+  left: 0;
+  top: 0;
+  position: absolute;
+  backdrop-filter: blur(2px);
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.3);
+  filter: blur(100);
+}
+.error-modal p {
+  font-size: 1.2rem;
+}
+
+@keyframes smooth {
+  from {
+    opacity: 0;
+    scale: 0.9;
+  }
+  to {
+    opacity: initial;
+    scale: initial;
+  }
 }
